--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div id="register">
+        <h2>Register:</h2>
+        <form id="register-form">
+          <input type="text" id="name" name="name" placeholder="Name">
+          <input type="email" id="email" name="email" placeholder="Email">
+          <input type="password" id="password" name="password" placeholder="Password">
+          <input type="tel" id="phone" name="phone" placeholder="Phone">
+          <button type="submit">Register</button>
+        </form>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
