--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <button type="submit">Register</button>
         </form>
       </div>
+      <div id="user-list">
+        <h2>Lista Usuarios</h2>
+      </div>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
